--- a/app/assets/stylesheets/_articles.scss
+++ b/app/assets/stylesheets/_articles.scss
@@ -15,181 +15,203 @@
       // display: flex;
       // align-items: center;
       // justify-content: space-between;
-        .short-header-container_left{
-          height: 100%;
-          float: left;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          position: relative;
-            .title img{
-              margin-top: 5px;
-              width: 87px;
-              height: 29px;
-       // !!!!!!!!一番下にコメントアウトで一覧のcss完成系あります!!!!!!!!!!!
-            }
-            .home {
+      .short-header-container_left{
+        height: 100%;
+        float: left;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+          .title img{
+            margin-top: 5px;
+            width: 87px;
+            height: 29px;
+     // !!!!!!!!一番下にコメントアウトで一覧のcss完成系あります!!!!!!!!!!!
+          }
+          .home {
+            height: 20px;
+            width: 57px;
+            background-image: url(home_off.png);
+            background-size: 57px 20px;
+            margin-left: 50px;
+            margin-top: 4px;
+            margin-right: 24px;
+            summary {
               height: 20px;
-              width: 57px;
-              background-image: url(home_off.png);
-              background-size: 57px 20px;
-              margin-left: 50px;
-              margin-top: 4px;
-              margin-right: 24px;
-              summary {
-                height: 20px;
-                color: transparent;
-                summary span {
-                  color: #000;
-                }
-              }
-              ul{
-              font-size: 12px;
-              display: block;
-              position: absolute;
-              top: 52px;
-              z-index: 20;
-              width: 198px;
-              background-color: white;
-              padding: 4px 0;
-              border: 1px solid #ddd;
-              border-radius: 3px;
-              box-shadow: 0 0 8px 0 rgba(0,0,0,.15);
-                .trend {
-                  height: 41px;
-                  width: 198px;
-                  background-image: url(trend_off.png);
-                  background-size: 198px 41px;
-                }
-                .trend:hover {
-                  background-image: url(trend_on.png);
-                }
-                .timeline {
-                  height: 41px;
-                  width: 198px;
-                  background-image: url(timeline_off.png);
-                  background-size: 198px 41px;
-                }
-                .timeline:hover {
-                  background-image: url(timeline_on.png);
-                }
-                .tag_feed {
-                  height: 41px;
-                  width: 198px;
-                  background-image: url(tag_feed_off.png);
-                  background-size: 198px 41px;
-                }
-                .tag_feed:hover {
-                  background-image: url(tag_feed_on.png);
-                }
+              color: transparent;
+              summary span {
+                color: #000;
               }
             }
-            .home:hover {
-              background-image: url(home_on.png);
+            ul{
+            font-size: 12px;
+            display: block;
+            position: absolute;
+            top: 52px;
+            z-index: 20;
+            width: 198px;
+            background-color: white;
+            padding: 4px 0;
+            border: 1px solid #ddd;
+            border-radius: 3px;
+            box-shadow: 0 0 8px 0 rgba(0,0,0,.15);
+              .trend {
+                height: 41px;
+                width: 198px;
+                background-image: url(trend_off.png);
+                background-size: 198px 41px;
+              }
+              .trend:hover {
+                background-image: url(trend_on.png);
+              }
+              .timeline {
+                height: 41px;
+                width: 198px;
+                background-image: url(timeline_off.png);
+                background-size: 198px 41px;
+              }
+              .timeline:hover {
+                background-image: url(timeline_on.png);
+              }
+              .tag_feed {
+                height: 41px;
+                width: 198px;
+                background-image: url(tag_feed_off.png);
+                background-size: 198px 41px;
+              }
+              .tag_feed:hover {
+                background-image: url(tag_feed_on.png);
+              }
             }
+          }
+          .home:hover {
+            background-image: url(home_on.png);
+          }
 
-            .community {
+          .community {
+            height: 20px;
+            width: 95px;
+            background-image: url(community_off.png);
+            background-size: 95px 20px;
+            margin-top: 4px;
+            margin-right: 24px;
+            summary {
               height: 20px;
-              width: 95px;
-              background-image: url(community_off.png);
-              background-size: 95px 20px;
-              margin-top: 4px;
-              margin-right: 24px;
-              summary {
-                height: 20px;
-                color: transparent;
-                summary span {
-                  color: #000;
-                }
-              }
-              ul{
-              font-size: 12px;
-              display: block;
-              position: absolute;
-              top: 52px;
-              z-index: 20;
-              width: 198px;
-              background-color: white;
-              padding: 4px 0;
-              border: 1px solid #ddd;
-              border-radius: 3px;
-              box-shadow: 0 0 8px 0 rgba(0,0,0,.15);
-                .user_list {
-                  height: 41px;
-                  width: 198px;
-                  background-image: url(user_list_off.png);
-                  background-size: 198px 41px;
-                }
-                .user_list:hover {
-                  background-image: url(user_list_on.png);
-                }
-                .organizations {
-                  height: 41px;
-                  width: 198px;
-                  background-image: url(organizations_off.png);
-                  background-size: 198px 41px;
-                }
-                .organizations:hover {
-                  background-image: url(organizations_on.png);
-                }
-                .calendar {
-                  height: 41px;
-                  width: 198px;
-                  background-image: url(calendar_off.png);
-                  background-size: 198px 41px;
-                }
-                .calendar:hover {
-                  background-image: url(calendar_on.png);
-                }
-                .hr {
-                  height: 9px;
-                  width: 198px;
-                  background-image: url(hr.png);
-                  background-size: 198px 9px;
-                }
-                .qiitadon {
-                  height: 41px;
-                  width: 198px;
-                  background-image: url(qiitadon_off.png);
-                  background-size: 198px 41px;
-                }
-                .qiitadon:hover {
-                  background-image: url(qiitadon_on.png);
-                }
-                .community_guide {
-                  height: 41px;
-                  width: 198px;
-                  background-image: url(community_guide_off.png);
-                  background-size: 198px 41px;
-                }
-                .community_guide:hover {
-                  background-image: url(community_guide_on.png);
-                }
-                .manual {
-                  height: 41px;
-                  width: 198px;
-                  background-image: url(manual_off.png);
-                  background-size: 198px 41px;
-                }
-                .manual:hover {
-                  background-image: url(manual_on.png);
-                }
+              color: transparent;
+              summary span {
+                color: #000;
               }
             }
-            .community:hover {
-              background-image: url(community_on.png);
+            ul{
+            font-size: 12px;
+            display: block;
+            position: absolute;
+            top: 52px;
+            z-index: 20;
+            width: 198px;
+            background-color: white;
+            padding: 4px 0;
+            border: 1px solid #ddd;
+            border-radius: 3px;
+            box-shadow: 0 0 8px 0 rgba(0,0,0,.15);
+              .user_list {
+                height: 41px;
+                width: 198px;
+                background-image: url(user_list_off.png);
+                background-size: 198px 41px;
+              }
+              .user_list:hover {
+                background-image: url(user_list_on.png);
+              }
+              .organizations {
+                height: 41px;
+                width: 198px;
+                background-image: url(organizations_off.png);
+                background-size: 198px 41px;
+              }
+              .organizations:hover {
+                background-image: url(organizations_on.png);
+              }
+              .calendar {
+                height: 41px;
+                width: 198px;
+                background-image: url(calendar_off.png);
+                background-size: 198px 41px;
+              }
+              .calendar:hover {
+                background-image: url(calendar_on.png);
+              }
+              .hr {
+                height: 9px;
+                width: 198px;
+                background-image: url(hr.png);
+                background-size: 198px 9px;
+              }
+              .qiitadon {
+                height: 41px;
+                width: 198px;
+                background-image: url(qiitadon_off.png);
+                background-size: 198px 41px;
+              }
+              .qiitadon:hover {
+                background-image: url(qiitadon_on.png);
+              }
+              .community_guide {
+                height: 41px;
+                width: 198px;
+                background-image: url(community_guide_off.png);
+                background-size: 198px 41px;
+              }
+              .community_guide:hover {
+                background-image: url(community_guide_on.png);
+              }
+              .manual {
+                height: 41px;
+                width: 198px;
+                background-image: url(manual_off.png);
+                background-size: 198px 41px;
+              }
+              .manual:hover {
+                background-image: url(manual_on.png);
+              }
             }
+          }
+          .community:hover {
+            background-image: url(community_on.png);
+          }
 
-            .search{
-              .messageform{
-                height: 32px;
-                width: 200px;
-                font-size: 12px;
-                border: none;
-                border-radius: 4px;
-                box-shadow: inset 0 1px 2px #ccc;
-              }
+          .search{
+            position: relative;
+            height: 32px;
+            width: 200px;
+            border: none;
+            background-color: white;
+            border-radius: 4px;
+            box-shadow: inset 0 1px 2px #ccc;
+            .messageform{
+              position: absolute;
+              height: 30px;
+              width: 167px;
+              font-size: 12px;
+              border: none;
+              padding: 1px 1px 1px 32px;
+              border-radius: 4px;
             }
+            ::-webkit-input-placeholder {
+              color: #acacac;
+            }
+            .search-icon {
+              position: absolute;
+              left: 2px;
+              float: left;
+              height: 24px;
+              width: 25px;
+              background-image: url(search_icon.png);
+              background-size: 25px 24px;
+              margin: 4px 0 4px 0px;
+              border: 0;
+            }
+          }
         }
         .short-header-container_right{
           float: right;
