--- a/app/assets/stylesheets/_show.scss
+++ b/app/assets/stylesheets/_show.scss
@@ -39,7 +39,7 @@
           }
           .likeCount {
             position: absolute;
-            top: -30px;
+            top: -33px;
             #like-button {
               font-size: 1.3rem;
               font-weight: 700;
@@ -68,7 +68,7 @@
             font-size: 0.8em;
           }
         }
-        #smallCircle {
+        #small_twitter {
           margin-right: 32px;
           margin-left: 8px;
           width: 32px;
@@ -87,11 +87,31 @@
             font-size: 1em
           }
         }
+        #small_twitter:hover {
+          background-color: rgb(0, 172, 237);
+        }
+        #small_facebook {
+          margin-right: 32px;
+          margin-left: 8px;
+          width: 32px;
+          height: 32px;
+          border-radius: 50%;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          color: #fff;
+          background-color: #aaa;
+          font-size: 18px;
+          margin-bottom: 16px;
           .fa-facebook-f {
             cursor: pointer;
             color: white;
             font-size: 1em
           }
+        }
+        #small_facebook:hover {
+          background-color: #3B5998;
+        }
       }
       .main {
         background-color: #fff;
@@ -276,7 +296,7 @@
                 height: 18px;
                 width: 80px;
                 box-sizing: border-box;
-                background-color: #1b95e0;
+                background-color: #3B5998;
                 color: #fff;
                 border-radius: 3px;
                 font-weight: 500;
