--- a/app/views/likes/_like.html.haml
+++ b/app/views/likes/_like.html.haml
@@ -1,15 +1,24 @@
 - if user_signed_in?
   - if article.like_user(current_user.id)
     = button_to article_like_path(article.likes, article_id: article.id), method: :delete, id: "like-button", remote: true do
-      %span{:tabindex => "0"}
-        = article.likes_count
+      .thumbs
+        %a.likeCount
+          %span{:tabindex => "-1"}
+            = article.likes_count
+          %i.fas.fa-thumbs-up
   - else
     = button_to article_likes_path(article), id: "like-button", remote: true do
-      %span{:tabindex => "-1"}
-        = article.likes_count
+      .thumbs
+        %a.linkCount
+          %span{:tabindex => "0"}
+            = article.likes_count
+          %i.fas.fa-check
 - else
-  %span
-    = article.likes_count
+  .thumbs
+    %a.likeCount
+      %span{:tabindex => "0"}
+        = article.likes_count
+      %i.fas.fa-thumbs-up
 / ↑サインインしていない、いいね数だけが表示
 / article.likes_countにいいねに紐づいたuser一覧の表示
 
