--- a/app/views/likes/_like.html.haml
+++ b/app/views/likes/_like.html.haml
@@ -2,23 +2,23 @@
   - if article.like_user(current_user.id)
     = button_to article_like_path(article.likes, article_id: article.id), method: :delete, id: "like-button", remote: true do
       .thumbs
+        %i.fas.fa-thumbs-up.fa-2x
         %a.likeCount
           %span{:tabindex => "-1"}
             = article.likes_count
-          %i.fas.fa-thumbs-up
   - else
     = button_to article_likes_path(article), id: "like-button", remote: true do
-      .thumbs
-        %a.linkCount
+      .check_icon
+        %i.fas.fa-check.fa-2x
+        %a.likeCount
           %span{:tabindex => "0"}
             = article.likes_count
-          %i.fas.fa-check
 - else
   .thumbs
+    %i.fas.fa-thumbs-up.fa-2x
     %a.likeCount
-      %span{:tabindex => "0"}
+      %span{:tabindex => "-1"}
         = article.likes_count
-      %i.fas.fa-thumbs-up
 / ↑サインインしていない、いいね数だけが表示
 / article.likes_countにいいねに紐づいたuser一覧の表示
 
