--- a/app/assets/stylesheets/tag_feed.scss
+++ b/app/assets/stylesheets/tag_feed.scss
@@ -1,12 +1,12 @@
-.body{
+.tag_feed{
   font-size: 1.4rem;
   color: #333;
   box-sizing: inherit;
-  display: inherit;
+  display: inline;
 
   .allWrapper{
     background-color: #f6f6f6;;
-    min-height: 800vh;
+    min-height: 200vh;
 
     .container1{
       padding-top: 32px;
@@ -24,9 +24,10 @@
         flex-direction: column;
         align-items: flex-start;
         width: 185px;
-        height: 1000px;
+        //height: 3000px;
         float: left;
         font-size: inherit;
+        padding-left: 110px;
 
         .menu-item1{
           padding-left: 16px;
@@ -78,9 +79,10 @@
 
       .main-view{
         margin-bottom: 24px;
-        min-width: 50vh;
+        min-width: 85vh;
         background-color: #fff;
         margin: auto 0;
+        float: left;
         .main-item{
           box-sizing: inherit;
           display: block;
@@ -93,9 +95,9 @@
             border-bottom: 1px solid #e8e8e8;
             padding: 16px;
             box-sizing: inherit;
-            font-size: 16px;
-            .main-label{
-              font-size: 12px;
+            font-size: 18px;
+            .main-label1{
+              font-size: 16px;
               margin-top: 2px;
               margin-right: 8px;
               box-sizing: inherit;
