--- a/app/views/articles/tag_feed.haml
+++ b/app/views/articles/tag_feed.haml
@@ -1,16 +1,19 @@
-.body
+.tag_feed
   .allWrapper
     .container1
       .menu-bar
         .menu-item1
           トレンド
           .menu-icon
+            = image_tag "3-trend_icon.png", size: "20×20", alt:"トレンド"
         .menu-item2
           タイムライン
           .menu-icon2
+            = image_tag "1-menubar-timeline.png", size: "20×20", alt:"トレンド"
         .menu-item3
           タグフィード
           .menu-icon3
+            = image_tag "3-menubar-tag_feed.png", size: "20×20", alt:"トレンド"
 
       .main-view
         .main-item
@@ -20,6 +23,7 @@
               .main-label2
 
               .label-icon
+                = image_tag "3-mainview.png", size: "15×15", alt:"トレンド"
 
         .articles
           .my_picture
@@ -87,15 +91,171 @@
             .article__data
               by emj-naka
 
+      .a-side
+        .p-home_ad
+          広告
+        .ranking-user
+          .ra-user-bar
+            .user-header
+              .user-header-label
+                ユーザーランキング
+              .user-list-tab
+                .user-list-tabitem1
+                  累計
+                .user-list-tabitem2
+                .user-list-tabitem3
+            .user-list-content
+              .ra-user
+                .ra-user-start
+                  .ra-user-icon
+                    .trophy
+                      = image_tag "!gold!.png", class:"gold", alt:"number_one"
+                      .gold-before
+                  .ra-user-image
+                    = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "32x32",  alt:"プロフ画"
+                .user-name
+                  @aaaoi
+                .ra-user-count
+                  552
+                  .ra-user-contrib
+                    Contributions
+
+              .ra-user
+                .ra-user-start
+                  .ra-user-icon
+                    .trophy
+                      = image_tag "!silvar!.png", class:"silver", alt:"number_two"
+                      .gold-before
+                  .ra-user-image
+                    = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "32x32",  alt:"プロフ画"
+                .user-name
+                  @aaaoi
+                .ra-user-count
+                  552
+                  .ra-user-contrib
+                    Contributions
+
+              .ra-user
+                .ra-user-start
+                  .ra-user-icon
+                    .trophy
+                      = image_tag "!bronze!.png", class:"bronze", alt:"number_three"
+                      .gold-before
+                  .ra-user-image
+                    = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "32x32",  alt:"プロフ画"
+                .user-name
+                  @aaaoi
+                .ra-user-count
+                  552
+                  .ra-user-contrib
+                    Contributions
+
+              .ra-user
+                .ra-user-start
+                  .ra-user-icon
+                    .trophy
+                      = image_tag "!4!.png", class:"4", alt:"4"
+                      .gold-before
+                  .ra-user-image
+                    = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "32x32",  alt:"プロフ画"
+                .user-name
+                  @aaaoi
+                .ra-user-count
+                  552
+                  .ra-user-contrib
+                    Contributions
+
+              .ra-user
+                .ra-user-start
+                  .ra-user-icon
+                    .trophy
+                      .trophy
+                        = image_tag "!5!.png", class:"5", alt:"5"
+                      .gold-before
+                  .ra-user-image
+                    = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "32x32",  alt:"プロフ画"
+                .user-name
+                  @aaaoi
+                .ra-user-count
+                  552
+                  .ra-user-contrib
+                    Contributions
+
+              .ra-user
+                .ra-user-start
+                  .ra-user-icon
+                    .trophy
+                      = image_tag "!6!.png", class:"6", alt:"6"
+                      .gold-before
+                  .ra-user-image
+                    = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "32x32",  alt:"プロフ画"
+                .user-name
+                  @aaaoi
+                .ra-user-count
+                  552
+                  .ra-user-contrib
+                    Contributions
+
+              .ra-user
+                .ra-user-start
+                  .ra-user-icon
+                    .trophy
+                      = image_tag "!7!.png", class:"7", alt:"7"
+                      .gold-before
+                  .ra-user-image
+                    = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "32x32",  alt:"プロフ画"
+                .user-name
+                  @aaaoi
+                .ra-user-count
+                  552
+                  .ra-user-contrib
+                    Contributions
+
+              .ra-user
+                .ra-user-start
+                  .ra-user-icon
+                    .trophy
+                      = image_tag "!8!.png", class:"8", alt:"8"
+                      .gold-before
+                  .ra-user-image
+                    = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "32x32",  alt:"プロフ画"
+                .user-name
+                  @aaaoi
+                .ra-user-count
+                  552
+                  .ra-user-contrib
+                    Contributions
+
+              .ra-user
+                .ra-user-start
+                  .ra-user-icon
+                    .trophy
+                      = image_tag "!9!.png", class:"9", alt:"9"
+                      .gold-before
+                  .ra-user-image
+                    = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "32x32",  alt:"プロフ画"
+                .user-name
+                  @aaaoi
+                .ra-user-count
+                  552
+                  .ra-user-contrib
+                    Contributions
+
+              .ra-user
+                .ra-user-start
+                  .ra-user-icon
+                    .trophy
+                      = image_tag "!10!.png", class:"10", alt:"10"
+                  .ra-user-image
+                    = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "32x32",  alt:"プロフ画"
+                .user-name
+                  @aaaoi
+                .ra-user-count
+                  552
+                  .ra-user-contrib
+                    Contributions
 
 
 
-    .container-body-right
-
-
-
-
-
-
-
-      .container-body
+            .container-body-right
+              .container-body
