--- a/app/views/articles/timeline.haml
+++ b/app/views/articles/timeline.haml
@@ -1,16 +1,20 @@
-.body
+.timeline
   .allWrapper
     .container1
       .menu-bar
         .menu-item1
           トレンド
           .menu-icon
+            = image_tag "1-mainview-trend.png", class:"trend", alt:"トレンド"
         .menu-item2
           タイムライン
           .menu-icon2
+            = image_tag "2-menubar-timeline.png", class:"timeline", alt:"タイムライン"
         .menu-item3
           タグフィード
+
           .menu-icon3
+            = image_tag "2-menubar-tag_feed.png", class:"tag_feed", alt:"タグフィード"
 
       .main-view
         .main-item
@@ -20,75 +24,240 @@
               .main-label2
 
               .label-icon
+                = image_tag "2-main-view.png", class:"mian-timeline", alt:"タイムライン"
 
         .articles
           .my_picture
             = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "40x40",  alt:"プロフ画"
           .article
+            .article-icon
+              = image_tag "2-mainview-list.png", size: "17x22",  alt:"投稿アイコン"
             .article__data
               emj-nakaが　投稿　しました。
             .article__title
               Vue CLI UIが想像以上に便利だった話
 
-          .articles
+        .articles
           .my_picture
             = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "40x40",  alt:"プロフ画"
           .article
+            .article-icon
+              = image_tag "2-mainview-list.png", size: "17x22",  alt:"投稿アイコン"
             .article__data
               emj-nakaが　投稿　しました。
             .article__title
               ランダムフォレスト
 
-          .articles
+        .articles
           .my_picture
             = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "40x40",  alt:"プロフ画"
           .article
+            .article-icon
+              = image_tag "2-mainview-list.png", size: "17x22",  alt:"投稿アイコン"
             .article__data
               emj-nakaが　投稿　しました。
             .article__title
               クラスタリング結果の比較
 
-          .articles
+        .articles
           .my_picture
             = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "40x40",  alt:"プロフ画"
           .article
+            .article-icon
+              = image_tag "2-mainview-list.png", size: "17x22",  alt:"投稿アイコン"
             .article__data
               emj-nakaが　投稿　しました。
             .article__title
               K-meansクラスタリング
-          .articles
+
+        .articles
           .my_picture
             = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "40x40",  alt:"プロフ画"
           .article
+            .article-icon
+              = image_tag "2-mainview-list.png", size: "17x22",  alt:"投稿アイコン"
             .article__data
               emj-nakaが　投稿　しました。
             .article__title
               階層的クラスタリング
 
-          .articles
+        .articles
           .my_picture
             = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "40x40",  alt:"プロフ画"
           .article
+            .article-icon
+              = image_tag "2-mainview-list.png", size: "17x22",  alt:"投稿アイコン"
             .article__data
               emj-nakaが　投稿　しました。
             .article__title
               総合実験（４日目）Jupyter Notebookを使った機械学習
 
-          .articles
+        .articles
           .my_picture
             = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "40x40",  alt:"プロフ画"
           .article
+            .article-icon
+              = image_tag "2-mainview-list.png", size: "17x22",  alt:"投稿アイコン"
             .article__data
               emj-nakaが　投稿　しました。
             .article__title
-              総合実験（３日目）Jupyter Notebookを使った多変量解析s
+              総合実験（３日目）Jupyter Notebookを使った多変量解析
 
-    .container-body-right
+      .a-side
+        .p-home_ad
+          広告
+        .ranking-user
+          .ra-user-bar
+            .user-header
+              .user-header-label
+                ユーザーランキング
+              .user-list-tab
+                .user-list-tabitem1
+                  累計
+                .user-list-tabitem2
+                .user-list-tabitem3
+            .user-list-content
+              .ra-user
+                .ra-user-start
+                  .ra-user-icon
+                    .trophy-gold
+                      .gold-before
+                  .ra-user-image
+                    = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "32x32",  alt:"プロフ画"
+                .user-name
+                  @aaaoi
+                .ra-user-count
+                  552
+                  .ra-user-contrib
+                    Contributions
+
+              .ra-user
+                .ra-user-start
+                  .ra-user-icon
+                    .trophy-gold
+                      .gold-before
+                  .ra-user-image
+                    = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "32x32",  alt:"プロフ画"
+                .user-name
+                  @aaaoi
+                .ra-user-count
+                  552
+                  .ra-user-contrib
+                    Contributions
+
+              .ra-user
+                .ra-user-start
+                  .ra-user-icon
+                    .trophy-gold
+                      .gold-before
+                  .ra-user-image
+                    = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "32x32",  alt:"プロフ画"
+                .user-name
+                  @aaaoi
+                .ra-user-count
+                  552
+                  .ra-user-contrib
+                    Contributions
+
+              .ra-user
+                .ra-user-start
+                  .ra-user-icon
+                    .trophy-gold
+                      .gold-before
+                  .ra-user-image
+                    = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "32x32",  alt:"プロフ画"
+                .user-name
+                  @aaaoi
+                .ra-user-count
+                  552
+                  .ra-user-contrib
+                    Contributions
+
+              .ra-user
+                .ra-user-start
+                  .ra-user-icon
+                    .trophy-gold
+                      .gold-before
+                  .ra-user-image
+                    = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "32x32",  alt:"プロフ画"
+                .user-name
+                  @aaaoi
+                .ra-user-count
+                  552
+                  .ra-user-contrib
+                    Contributions
+
+              .ra-user
+                .ra-user-start
+                  .ra-user-icon
+                    .trophy-gold
+                      .gold-before
+                  .ra-user-image
+                    = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "32x32",  alt:"プロフ画"
+                .user-name
+                  @aaaoi
+                .ra-user-count
+                  552
+                  .ra-user-contrib
+                    Contributions
+
+              .ra-user
+                .ra-user-start
+                  .ra-user-icon
+                    .trophy-gold
+                      .gold-before
+                  .ra-user-image
+                    = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "32x32",  alt:"プロフ画"
+                .user-name
+                  @aaaoi
+                .ra-user-count
+                  552
+                  .ra-user-contrib
+                    Contributions
+
+              .ra-user
+                .ra-user-start
+                  .ra-user-icon
+                    .trophy-gold
+                      .gold-before
+                  .ra-user-image
+                    = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "32x32",  alt:"プロフ画"
+                .user-name
+                  @aaaoi
+                .ra-user-count
+                  552
+                  .ra-user-contrib
+                    Contributions
+
+              .ra-user
+                .ra-user-start
+                  .ra-user-icon
+                    .trophy-gold
+                      .gold-before
+                  .ra-user-image
+                    = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "32x32",  alt:"プロフ画"
+                .user-name
+                  @aaaoi
+                .ra-user-count
+                  552
+                  .ra-user-contrib
+                    Contributions
+
+              .ra-user
+                .ra-user-start
+                  .ra-user-icon
+                    .trophy-gold
+                      .gold-before
+                  .ra-user-image
+                    = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "32x32",  alt:"プロフ画"
+                .user-name
+                  @aaaoi
+                .ra-user-count
+                  552
+                  .ra-user-contrib
+                    Contributions
 
 
 
-
-
-
-
-      .container-body
+            .container-body-right
+              .container-body
