--- a/app/views/articles/trend.haml
+++ b/app/views/articles/trend.haml
@@ -1,25 +1,39 @@
-.body
+.trend
   .allWrapper
     .container1
       .menu-bar
-        .menu-item1
-          トレンド
-          .menu-icon
-        .menu-item2
-          タイムライン
+        .menu-items1
+          .menu-icon1
+            = image_tag "1-menu-bar-trend2.png", size:"10×10" , alt:"トレンド"
+          .menu-item1
+            .item1-name
+              トレンド
+
+        .menu-items2
           .menu-icon2
-        .menu-item3
-          タグフィード
+            = image_tag "1-menubar-timeline.png", size:"10×10" , alt: "タイムライン"
+          .menu-item2
+            .item2-name
+              タイムライン
+
+        .menu-items3
           .menu-icon3
+            = image_tag "1-menu-bar-tag_feed.png", size:"10×10" , alt:"タグフィード"
+          .menu-item3
+            .item3-name
+              タグフィード
 
       .main-view
         .main-item
           .main-header
-            .main-label1
-              トレンド
-              .main-label2
-                最近人気の記事を更新
-              .label-icon
+            .main-label-icon1
+              = image_tag "1-mainview-trend.png", class:"trend_view", alt:"trend_view"
+              .main-label1
+                .label-article
+                  トレンド
+                  .main-label2
+                  最近人気の記事を更新
+              .label-icon3
 
         .articles
           .my_picture
@@ -29,6 +43,8 @@
               Vue CLI UIが想像以上に便利だった話
             .article__data
               by emj-naka 2017/10/22
+              .goods-icon
+                = image_tag "!goods_mark!.png", class:"goods", alt:"goods_icon"
 
         .articles
           .my_picture
@@ -38,6 +54,8 @@
               画像認識で「綾鷹を選ばせる」AIを作る
             .article__data
               by emj-naka 2017/10/22
+              .goods-icon
+                = image_tag "!goods_mark!.png", class:"goods", alt:"goods_icon"
 
         .articles
           .my_picture
@@ -47,6 +65,8 @@
               ブロックチェーンにまつわる7つの『不都合な真実』
             .article__data
               by emj-naka 2017/10/22
+              .goods-icon
+                = image_tag "!goods_mark!.png", class:"goods", alt:"goods_icon"
 
         .articles
           .my_picture
@@ -56,6 +76,8 @@
               Dockerfile のベストプラクティスを自分なりに整理してみた
             .article__data
               by emj-naka 2017/10/22
+              .goods-icon
+                = image_tag "!goods_mark!.png", class:"goods", alt:"goods_icon"
 
 
         .articles
@@ -66,6 +88,8 @@
               ドメインモデルをコードへ落とす 〜あなたのクラスは、どこから？〜
             .article__data
               by emj-naka 2017/10/22
+              .goods-icon
+                = image_tag "!goods_mark!.png", class:"goods", alt:"goods_icon"
 
         .articles
           .my_picture
@@ -75,6 +99,8 @@
               【深層強化学習】『2018年最強手法(?)』Ape-X 実装・解説
             .article__data
               by emj-naka 2017/10/22
+              .goods-icon
+                = image_tag "!goods_mark!.png", class:"goods", alt:"goods_icon"
 
         .articles
           .my_picture
@@ -84,6 +110,8 @@
               【深層強化学習】『2018年最強手法(?)』Ape-X 実装・解説
             .article__data
               by emj-naka 2017/10/22
+              .goods-icon
+                = image_tag "!goods_mark!.png", class:"goods", alt:"goods_icon"
 
         .articles
           .my_picture
@@ -93,6 +121,8 @@
               【深層強化学習】『2018年最強手法(?)』Ape-X 実装・解説
             .article__data
               by emj-naka 2017/10/22
+              .goods-icon
+                = image_tag "!goods_mark!.png", class:"goods", alt:"goods_icon"
 
         .articles
           .my_picture
@@ -102,6 +132,8 @@
               【深層強化学習】『2018年最強手法(?)』Ape-X 実装・解説
             .article__data
               by emj-naka 2017/10/22
+              .goods-icon
+                = image_tag "!goods_mark!.png", class:"goods", alt:"goods_icon"
 
         .articles
           .my_picture
@@ -111,13 +143,172 @@
               【深層強化学習】『2018年最強手法(?)』Ape-X 実装・解説
             .article__data
               by emj-naka 2017/10/22
+              .goods-icon
+                = image_tag "!goods_mark!.png", class:"goods", alt:"goods_icon"
 
-    .container-body-right
+      .a-side
+        .p-home_ad
+          広告
+        .ranking-user
+          .ra-user-bar
+            .user-header
+              .user-header-label
+                ユーザーランキング
+              .user-list-tab
+                .user-list-tabitem1
+                  累計
+                .user-list-tabitem2
+                .user-list-tabitem3
+            .user-list-content
+              .ra-user
+                .ra-user-start
+                .ra-user-icon
+                .trophy
+                  = image_tag "!gold!.png", class:"gold", alt:"number_one"
+                  .gold-before
+                .ra-user-image
+                  = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "32x32",  alt:"プロフ画"
+                .user-name
+                  @aaaoi
+                .ra-user-count
+                  552
+                  .ra-user-contrib
+                    Contributions
 
+              .ra-user
+                .ra-user-start
+                .ra-user-icon
+                .trophy
+                  = image_tag "!silvar!.png", class:"gold", alt:"number_one"
+                  .gold-before
+                .ra-user-image
+                  = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "32x32",  alt:"プロフ画"
+                .user-name
+                  @aaaoi
+                .ra-user-count
+                  552
+                  .ra-user-contrib
+                    Contributions
 
+              .ra-user
+                .ra-user-start
+                .ra-user-icon
+                .trophy
+                  = image_tag "!bronze!.png", class:"gold", alt:"number_one"
+                  .gold-before
+                .ra-user-image
+                  = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "32x32",  alt:"プロフ画"
+                .user-name
+                  @aaaoi
+                .ra-user-count
+                  552
+                  .ra-user-contrib
+                    Contributions
 
+              .ra-user
+                .ra-user-start
+                .ra-user-icon
+                .trophy
+                  = image_tag "!4!.png", class:"gold", alt:"number_one"
+                  .gold-before
+                .ra-user-image
+                  = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "32x32",  alt:"プロフ画"
+                .user-name
+                  @aaaoi
+                .ra-user-count
+                  552
+                  .ra-user-contrib
+                    Contributions
 
+              .ra-user
+                .ra-user-start
+                .ra-user-icon
+                .trophy
+                  = image_tag "!5!.png", class:"gold", alt:"number_one"
+                  .gold-before
+                .ra-user-image
+                  = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "32x32",  alt:"プロフ画"
+                .user-name
+                  @aaaoi
+                .ra-user-count
+                  552
+                  .ra-user-contrib
+                    Contributions
 
+              .ra-user
+                .ra-user-start
+                .ra-user-icon
+                .trophy
+                  = image_tag "!6!.png", class:"gold", alt:"number_one"
+                  .gold-before
+                .ra-user-image
+                  = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "32x32",  alt:"プロフ画"
+                .user-name
+                  @aaaoi
+                .ra-user-count
+                  552
+                  .ra-user-contrib
+                    Contributions
 
+              .ra-user
+                .ra-user-start
+                .ra-user-icon
+                .trophy
+                  = image_tag "!7!.png", class:"gold", alt:"number_one"
+                  .gold-before
+                .ra-user-image
+                  = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "32x32",  alt:"プロフ画"
+                .user-name
+                  @aaaoi
+                .ra-user-count
+                  552
+                  .ra-user-contrib
+                    Contributions
 
-      .container-body
+              .ra-user
+                .ra-user-start
+                .ra-user-icon
+                .trophy
+                  = image_tag "!8!.png", class:"gold", alt:"number_one"
+                  .gold-before
+                .ra-user-image
+                  = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "32x32",  alt:"プロフ画"
+                .user-name
+                  @aaaoi
+                .ra-user-count
+                  552
+                  .ra-user-contrib
+                    Contributions
+
+              .ra-user
+                .ra-user-start
+                .ra-user-icon
+                .trophy
+                  = image_tag "!9!.png", class:"gold", alt:"number_one"
+                  .gold-before
+                .ra-user-image
+                  = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "32x32",  alt:"プロフ画"
+                .user-name
+                  @aaaoi
+                .ra-user-count
+                  552
+                  .ra-user-contrib
+                    Contributions
+
+              .ra-user
+                .ra-user-start
+                .ra-user-icon
+                .trophy
+                  = image_tag "!10!.png", class:"gold", alt:"number_one"
+                  .gold-before
+                .ra-user-image
+                  = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "32x32",  alt:"プロフ画"
+                .user-name
+                  @aaaoi
+                .ra-user-count
+                  552
+                  .ra-user-contrib
+                    Contributions
+
+            .container-body-right
+              .container-body
