editing-tag-feed

--- a/app/assets/stylesheets/_articles.scss
+++ b/app/assets/stylesheets/_articles.scss
@@ -74,13 +74,13 @@
               .timeline:hover {
                 background-image: url(timeline_on.png);
               }
-              .tag_feed {
+              .tag-feed {
                 height: 41px;
                 width: 198px;
                 background-image: url(tag_feed_off.png);
                 background-size: 198px 41px;
               }
-              .tag_feed:hover {
+              .tag-feed:hover {
                 background-image: url(tag_feed_on.png);
               }
             }
