--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -14,7 +14,7 @@
             %ul
               .trend
               .timeline
-              .tag_feed
+              .tag-feed
         .community
           %details
             %summary
