fix_like_function

--- a/app/assets/stylesheets/_show.scss
+++ b/app/assets/stylesheets/_show.scss
@@ -21,23 +21,11 @@
         position: sticky;
         margin-top: 40px;
         top: 20vh;
-        #folder {
-          border-radius: 50%;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          width: 50px;
-          height: 50px;
-          margin-right: 24px;
-          margin-bottom: 30px;
-          transition: color .1s;
-          background-color: gray;
-          position: relative;
-          .fa-folder {
-            cursor: pointer;
-            color: white;
-            font-size: 0.8em;
-          }
+        .thumbs_icon {
+          border: none;
+        }
+        .folder_icon {
+          border: none;
         }
         #small_twitter {
           margin-right: 32px;
