トレンド　ビュー訂正

--- a/app/assets/stylesheets/_trend.scss
+++ b/app/assets/stylesheets/_trend.scss
@@ -31,7 +31,7 @@
         padding-left: 110px;
 
         .menu-items1{
-          padding-left: 16px;
+          padding-left: 18px;
           padding: 8px;
           margin-bottom: 8px;
           position: relative;
@@ -46,7 +46,7 @@
         }
 
         .menu-items2{
-          padding-left: 16px;
+          padding-left: 18px;
           padding: 8px;
           margin-bottom: 8px;
           position: relative;
@@ -62,7 +62,7 @@
         }
 
         .menu-items3{
-          padding-left: 16px;
+          padding-left: 18px;
           padding: 8px;
           margin-bottom: 8px;
           position: relative;
@@ -168,4 +168,32 @@
     }
   }
 
+.menu-bar-trend2{
+          height: 20px;
+          width: 20px;
+        }
 
+.menu-bar-timeline{
+    height: 15px;
+    width: 15px;
+}
+
+.menu-bar-tag_feed{
+  height: 15px;
+  width: 15px;
+}
+
+.trend_view1{
+  height: 20px;
+  width: 30px;
+}
+
+.goods{
+  height: 18px;
+  width: 18px;
+}
+
+.rank{
+  height: 17px;
+  width: 17px;
+}
